@@ -2,6 +2,5 @@
 #define METER_H
 
 void meter_init(const char *pathname);
-void meter_setinterval(int interval);
 
 #endif /* METER_H */
