@@ -1,6 +1,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <ctype.h>
+#include <errno.h>
 
 #include "console.h"
 #include "util.h"
@@ -53,4 +54,43 @@ dohexdump(const char *buf, size_t len)
 		msg("%s", "");
 	}
 	msg("%6lx:", (unsigned long) x);
+}
+
+/* XXX this shouldn't be here. */
+#define SECTORSIZE 512
+
+off_t
+getsize(const char *str)
+{
+	char *suffix;
+	off_t value;
+
+	errno = 0;
+	value = strtoll(str, &suffix, 0);
+	if (errno) {
+		msg("%s: Invalid number", str);
+		die();
+	}
+	if (*suffix == 0 || !strcmp(suffix, "b")) {
+		/* bytes */
+		return value;
+	}
+	if (!strcmp(suffix, "s")) {
+		/* sectors */
+		return value * SECTORSIZE;
+	}
+	if (!strcmp(suffix, "k") || !strcmp(suffix, "K")) {
+		/* Kb */
+		return value*1024;
+	}
+	if (!strcmp(suffix, "m") || !strcmp(suffix, "M")) {
+		/* Mb */
+		return value*1024*1024;
+	}
+	if (!strcmp(suffix, "g") || !strcmp(suffix, "G")) {
+		/* Gb */
+		return value*1024*1024*1024;
+	}
+	msg("%s: Invalid size suffix %s\n", str, suffix);
+	die();
 }
